--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -5,12 +5,15 @@ permalink: /talks/
 author_profile: true
 ---
 
-{% if site.talkmap_link == true %}
+1. META-BTS: Bootstrapping Precision Beyond the Limit
+- [ACM SIGSAC Conference on Computer and Communications Security (CCS 2022)](https://www.sigsac.org/ccs/CCS2022/), Los Angeles, USA, Nov 2022
+- [2022 Global Korean Mathematical Society International Conference](https://www.kms.or.kr/conference/2022_fall/index.html), Seoul, Korea, Oct 2022
 
-<p style="text-decoration:underline;"><a href="/talkmap.html">See a map of all the places I've given a talk!</a></p>
+1. Adventures in crypto dark matter: Attacks and fixes for weak pseudorandom functions
+- [IACR International Conference on Public-Key Cryptography (PKC 2021)](https://pkc.iacr.org/2021/), online, May 2021
+- [2020 Korean Mathematical Society Spring Meeting](https://www.kms.or.kr/meetings/spring2020/), online, July 2020
 
-{% endif %}
+1. Secure Genotype Imputation using HEaaN
+- [iDASH Privacy & Security Workshop (iDASH 2019)](http://www.humangenomeprivacy.org/2019/), Bloomington, USA, Oct 2019
 
-{% for post in site.talks reversed %}
-  {% include archive-single-talk.html %}
-{% endfor %}
+
